Fix gap.

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ main {
 .date-container {
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    gap: 1rem;
+    gap: .5rem;
 }
 
 .date {
